--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-My Github Page
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="zh-CN"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="zh-CN"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="zh-CN"> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="zh-CN"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="refresh" content="0; url=./jsflakes.html"/>
+	<script>location.href="./jsflakes.html"</script>
+</head>
+<body>
+</body>
+</html>
+
+
