--- a/jsflakes.html
+++ b/jsflakes.html
@@ -1,4 +1,4 @@
-<!-- saved from url=(0014)about:internet -->
+<!doctype html>
 <HTML>
 	<head>
 <script type="text/javascript">
@@ -27,5 +27,18 @@
 </EMBED>
 </OBJECT></center>
 <SCRIPT src='jsflakes.js'></script>
+<div id="disqus_thread" style="width:741px;margin:0 auto;"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'michalliu'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </BODY>
 </HTML>
